<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_theme_gradient"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textview_driver_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:textSize="15sp"
        android:width="184dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="72dp"
        android:text="@string/driver_login_welcome_message" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_driverLogin_emailInput"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorTextAppearance="@style/text_input_layout_error_appearance"
        android:hint="@string/driver_login_email_hint"
        android:textColorHint="@color/textColor"
        style="@style/activity_a2d2_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/textview_driver_login_welcome"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_driverLogin_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true"
            android:textColor="@color/textColor"
            app:errorEnabled="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_driverLogin_passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_driverLogin_emailInput"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/text_input_layout_error_appearance"
        app:passwordToggleEnabled="true"
        android:hint="@string/driver_login_password_hint"
        android:textColorHint="@color/textColor"
        style="@style/activity_a2d2_text_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_driverLogin_passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:textColor="@color/textColor"
            app:errorEnabled="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/materialButton_driverLogin_loginButton"
        style="@style/App.MaterialButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/driver_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_driverLogin_loadingIndicator"
        android:layout_width="118dp"
        android:layout_height="110dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>