...
        android:src="@drawable/a2d2_text_logo"
        android:contentDescription="@string/home_page_logo_text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_navigate_to_rules"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_navigate_to_rules"
        style="@style/App.MaterialButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/request_ride_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_main_driver_login"
        />

    <android.support.design.button.MaterialButton
        android:id="@+id/button_main_driver_login"
        style="@style/App.MaterialButton"
        android:layout_gravity="center_horizontal"
...
