...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.button.MaterialButton
        style="@style/App.MaterialButton"
        android:id="@+id/button_rules_agree"
        android:layout_marginBottom="8dp"
        android:onClick="btnRulesAgree_Clicked"
        android:text="@string/a2d2_rules_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <ProgressBar
        android:id="@+id/rules_progress_bar"
        android:layout_width="118dp"
        android:layout_height="110dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
