...
    <string name="a2d2_rules_title">A2D2 Program Rules</string>
    <string name="a2d2_rules_text">1. You are required to show your driver your military ID to be picked up. \n\n 2. The driver will only take you to your home address. \n\n 3. Groups will only be taken to single address. \n\n 4. Your pickup location must be within 25 miles of your duty station.</string>
    <string name="a2d2_rules_disclaimer">PRIVACY: A2D2 is an anonymous program. None of your provided information will be stored or given to leadership at anytime. \n\n DISCLAIMER: This is a private organization. It is not part of the Department of Defense or any of its components and it has no governmental status.</string>
    <string name="a2d2_rules_button">Agree</string>
    <string name="dialog_allow">ALLOW</string>
    <string name="dialog_deny">DENY</string>
    <string name="dialog_okay">OKAY</string>
    <string name="dialog_confirm">CONFIRM</string>
    <string name="dialog_title_LocationPermissionDenied">Location Permission Denied</string>
    <string name="location_dialog_text">Use Location?\n\nThis app wants to change</string>
    <string name="error_LocationPermissionDenied">You have not allowed the A2D2 app to access your GPS location. Without this permission, the app cannot function. Please go to your phone settings and enable the GPS permission.</string>
    <string name="error_dialog_title">Error</string>
    <string name="dialog_title_CallPermissionDenied">Call Permission Denied</string>
...
    <string name="riderequestdetails_driver_completejob">Confirm you dropped off the rider?</string>
    <string name="riderequestdetails_newdriver_takejob">This job has already been taken by another driver. Are you sure you want to pickup this rider anyway?</string>
    <string name="riderequestdetails_completejob">Complete Job</string>
    <string name="riderequestdetails_driver_messageToRider">This is your A2D2 driver. I\'m on my way!</string>
    <string name="home_page_logo_text_description">A2D2: Airmen Against Drunk Driving</string>

    <string name="connection_error">Please check your internet connection.</string>
    <string name="connection_error_title">Network Connection Error</string>
</resources>

